--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <header></header>
     <section></section>
     <footer>
-      Project coded by <a href="">Sarah Ngunangwa</a>, and is
-      <a href="">open-sourced on GitHub</a> and <a href="">hosted on Netlify</a>
+      Project coded by <a href="https://github.com/5ar4hJ">Sarah Ngunangwa</a>,
+      and is <a href="">open-sourced on GitHub</a> and
+      <a href="">hosted on Netlify</a>
     </footer>
   </body>
 </html>
