--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <section></section>
     <footer>
       Project coded by <a href="https://github.com/5ar4hJ">Sarah Ngunangwa</a>,
-      and is <a href="">open-sourced on GitHub</a> and
-      <a href="">hosted on Netlify</a>
+      and is
+      <a href="https://github.com/5ar4hJ/Weather-Application"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a href="https://weatheronthego.netlify.app/">hosted on Netlify</a>
     </footer>
   </body>
 </html>
