--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <header></header>
     <section></section>
     <footer>
-      Project coded by <a href="https://github.com/5ar4hJ">Sarah Ngunangwa</a>,
+      Project coded by
+      <a href="https://github.com/5ar4hJ" target="_blank">Sarah Ngunangwa</a>,
       and is
-      <a href="https://github.com/5ar4hJ/Weather-Application"
+      <a href="https://github.com/5ar4hJ/Weather-Application" target="_blank"
         >open-sourced on GitHub</a
       >
       and
-      <a href="https://weatheronthego.netlify.app/">hosted on Netlify</a>
+      <a href="https://weatheronthego.netlify.app/" target="_blank"
+        >hosted on Netlify</a
+      >
     </footer>
   </body>
 </html>
