--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Weather Forecast</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <form>
+        <input type="text" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
     <section></section>
     <footer>
       Project coded by
