Updated section of html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         <input type="submit" value="Search" />
       </form>
     </header>
-    <section></section>
+    <section>
+      <h1>Calgary</h1>
+      <p>
+        <div> Wednesday 1422h, scattered clouds
+        <br />
+        Humidity: 67%, Wind: 80km/h</div>
+      </p>
+      <div>🌧️ -5°C</div>
+    </section>
     <footer>
       Project coded by
       <a href="https://github.com/5ar4hJ" target="_blank">Sarah Ngunangwa</a>,
