Updated time structure on date

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
       <h1>Calgary</h1>
       <p>
-        <div> Wednesday 1422h, scattered clouds
+        <div> Wednesday 14:22, scattered clouds
         <br />
         Humidity: 67%, Wind: 80km/h</div>
       </p>
