--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Weather Forecast</title>
   </head>
   <body>
-    <header>
+    <div class="App-content"><header>
       <form>
         <input type="text" placeholder="Enter a city..." required />
         <input type="submit" value="Search" />
@@ -32,6 +33,8 @@
       <a href="https://weatheronthego.netlify.app/" target="_blank"
         >hosted on Netlify</a
       >
-    </footer>
+     </footer>
+    </div>
+    
   </body>
 </html>
