--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <div class="App-content"><header>
-      <form>
-        <input type="text" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
+      <form class="search-form">
+        <input type="text" placeholder="Enter a city..." required class="search-input" />
+        <input type="submit" value="Search" class="search-button"/>
       </form>
     </header>
     <section>
