Added basic CSS

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
       </form>
     </header>
     <section>
-      <h1>Calgary</h1>
-      <p>
+     <span class="app-data">
+      <h1 class="current-city">Calgary</h1>
+      <p class="weather-details">
         <div> Wednesday 14:22, scattered clouds
         <br />
-        Humidity: 67%, Wind: 80km/h</div>
+        Humidity: <span class="dets">67%</span>, Wind: <span class="dets">80km/h</span> </div>
       </p>
-      <div>🌧️ -5°C</div>
+      <div class="current-temperature"> 
+        <div class="icon">🌧️</div> 
+        <div class="temp-value"> -5</div> 
+        <div class="temp-units">°C</div> 
+      </div>
+     </span>
     </section>
     <footer>
       Project coded by
