Added basic functionality using API

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </p>
       <div class="current-temperature"> 
         <div class="icon">🌧️</div> 
-        <div class="temp-value"> -5</div> 
+        <div class="temp-value" id="temperature"> -5</div> 
         <div class="temp-units">°C</div> 
       </div>
     </div>
