Added humidity, wind speed and description functionality using API

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
      </header>
     <section>
      <div class="app-data">
-      <h1 class="current-city" id="displayed-city">Calgary</h1>
+      <h1 class="current-city" id="displayed-city"></h1>
       <p class="weather-details">
-        <div> Wednesday 14:22, scattered clouds
+        <div> Wednesday 14:22, <span id="descriptor">scattered clouds</span> 
         <br />
-        Humidity: <span class="dets">67%</span>, Wind: <span class="dets">80km/h</span> 
+        Humidity: <span class="dets" id="humidity"></span>, Wind: <span class="dets" id="wind-speed"></span> 
        </div>
       </p>
       <div class="current-temperature"> 
         <div class="icon">🌧️</div> 
-        <div class="temp-value" id="temperature"> -5</div> 
+        <div class="temp-value" id="temperature"></div> 
         <div class="temp-units">°C</div> 
       </div>
     </div>
