More weather data added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <div class="app-data">
       <h1 class="current-city" id="displayed-city"></h1>
       <p class="weather-details">
-        <div> Wednesday 14:22, <span id="descriptor">scattered clouds</span> 
+        <div> <span id="time"></span>, <span id="descriptor"></span> 
         <br />
         Humidity: <span class="dets" id="humidity"></span>, Wind: <span class="dets" id="wind-speed"></span> 
        </div>
