--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
        </div>
       </p>
       <div class="current-temperature"> 
-        <div class="icon">🌧️</div> 
+        <div id="icon">
+          <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-night.png" class="icon" alt="">
+        </div> 
         <div class="temp-value" id="temperature"></div> 
         <div class="temp-units">°C</div> 
       </div>
